[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Characters/bat.png" type="Texture" id=1]
[ext_resource path="res://Assets/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Game/Combat/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Game/Enemies/EnemyStats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/Combat/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 8.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 12.0
height = 12.0

[sub_resource type="CircleShape2D" id=9]
radius = 152.0

[sub_resource type="CircleShape2D" id=10]
radius = 9.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -24 )
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
animation = "Fly"
frame = 1
playing = true

[node name="ShadowSprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -26 )
shape = SubResource( 8 )

[node name="EnemyStats" parent="." instance=ExtResource( 5 )]
max_health = 6
level = 5

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -30 )
shape = SubResource( 10 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]
